feat(authentication): implement user signout endpoint (#22)
- create signout route
- create an authentication middleware

[Delivers #167377537]
